--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
@@ -46,7 +47,7 @@
     "framer-motion": "^11.15.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^13.5.8",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-day-picker": "8.10.1",
